@@ -5,6 +5,7 @@ Change log next version
 * Removed redundant cast when creating a class replicas for final system classes.
 * Cleaned up some code in the ClassReplicaCreator class
 * Added support for answers, name and extract interfaces in PowerMockito when using annotations (@Mock). Note that answers doesn't work for final classes or methods! (issue 486).
+* PowerMockIgnore is now taken into account when using the Java Agent PowerMockRule.
 
 Change log 1.5.5 (2014-05-28)
 -----------------------------
